@@ -1,3 +1,8 @@
+Thu Oct 11 00:53:31 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (display): I don't think it's possible for decomp to be
+	  NULL on the display_to_stdout path, but better safe than sorry.
+
 Thu Oct 11 00:38:56 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (display): Connect up the decompression pipeline in the
